...
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:onClick="viewAddRequestsClicked"
        android:text="View Added Requests"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:onClick="addClicked"
        android:text="Add A Restaurant"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/coffeeField2" />

...
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:onClick="viewRestaurantClicked"
        android:text="View restaurant"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/merchant_singupb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button26"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/merchant_singupb"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:onClick="singOutClicked"
        android:text="Sign Out"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

...
