...
<!--        android:layout_marginStart="7dp"-->
<!--        android:layout_marginLeft="7dp"-->
<!--        android:layout_marginEnd="29dp"-->
<!--        android:layout_marginRight="29dp"-->
<!--        android:text="Address"-->
<!--        android:textSize="27sp"-->
<!--        app:layout_constraintBaseline_toBaselineOf="@+id/addressFiled"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/addressFiled"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->
<!--    <EditText-->
<!--        android:id="@+id/addressFiled"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
...
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="17dp"-->
<!--        android:layout_marginLeft="17dp"-->
<!--        android:layout_marginBottom="14dp"-->
<!--        android:text="Zip Code"-->
<!--        android:textSize="27sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/zipField"-->
<!--        app:layout_constraintStart_toStartOf="@+id/guideline" />-->
<!--    <EditText-->
<!--        android:id="@+id/zipField"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
...
<!--        android:layout_marginBottom="23dp"-->
<!--        android:text="State"-->
<!--        android:textSize="27sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView14"-->
<!--        app:layout_constraintStart_toStartOf="@+id/textView14" />-->
<!--    <EditText-->
<!--        android:id="@+id/stateField"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="29dp"-->
<!--        android:layout_marginEnd="25dp"-->
<!--        android:layout_marginRight="25dp"-->
<!--        android:ems="10"-->
...
        android:textColor="#E91E63"
        android:textColorLink="#00E43434"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_marginBottom="88dp"
        android:text="Submit Request"
        android:onClick="submitClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
...
